--- a/WiU - B3/css/main.css
+++ b/WiU - B3/css/main.css
@@ -5,10 +5,12 @@ body{
 	font-family: helvetica, arial, sans-serif;
 	color:#8636A6; /*changes color of the whole text*/
 	margin-top: 0;
+	background-image: url("../img/chp_waves_1.jpg");
 }
 #wrapper{
 	width:960px;
 	margin: 0 auto;
+	background-color: #BFDDFF;
 	padding-left: 1%;
 	padding-right: 1%;
 	-webkit-box-shadow: 0px 0px 5px #DD4B44;
